# C-_Boiler_Plate

./: .clang-format  .gitignore  .travis.sh  .travis.yml  CMakeLists.txt  README.md
tests/: cpp_sorter_test.cpp
tests/benchmarks/: benchmark.cpp
